# try-rig

./: Cargo.toml  README.md  demo.tape
docs/: architecture.md  design.md  plan.md  prd.md  status.md  trials.md
src/: main.rs
src/agents/: mod.rs  multi_agent.rs  rag_agent.rs  simple.rs  tool_agent.rs
src/demos/: extraction.rs  mod.rs  streaming.rs
src/tools/: calculator.rs  datetime.rs  file_search.rs  mod.rs  string_tools.rs  weather.rs
